# Emma

./: .gitmodules  .gits.swp  README.md
Firmware/SourceCode/Emma_test/: .gitignore  CMakeLists.txt  flash.sh  gitACP.sh  gitAcp.sh  gitacp.sh  menuconfig.sh  sdkconfig
Firmware/SourceCode/Emma_test/components/: lv_conf.h
Firmware/SourceCode/Emma_test/components/Emma/: CMakeLists.txt  Emma.cpp  Emma.h  Emma_LovyanGFX.hpp
Firmware/SourceCode/Emma_test/components/Emma/Button/: Button.cpp  Button.h  README.md
Firmware/SourceCode/Emma_test/components/Emma/Button/iot_button/: iot_button.c  iot_button.h
Firmware/SourceCode/Emma_test/components/Emma/Buzzer/: Buzzer.cpp  Buzzer.h
Firmware/SourceCode/Emma_test/components/Emma/Buzzer/Tone/: Tone.cpp  esp32-hal-ledc.cpp  esp32-hal-ledc.h
Firmware/SourceCode/Emma_test/components/Emma/Encoder/: Encoder.cpp  Encoder.h
Firmware/SourceCode/Emma_test/components/Emma/LCD/: LovyanGFX_Emma.hpp
Firmware/SourceCode/Emma_test/components/Emma/RGBLED/: RGBLED.cpp
Firmware/SourceCode/Emma_test/components/EmmaBSP/: CMakeLists.txt  Emma.cpp  Emma.h  README.md
Firmware/SourceCode/Emma_test/components/EmmaBSP/Buzzer/: Buzzer.cpp
Firmware/SourceCode/Emma_test/components/EmmaBSP/Buzzer/Tone/: Tone.cpp
Firmware/SourceCode/Emma_test/components/EmmaBSP/Encoder/: Encoder.cpp  Encoder.h
Firmware/SourceCode/Emma_test/components/EmmaBSP/Encoder/Button/: Button.cpp  Button.h
Firmware/SourceCode/Emma_test/components/EmmaBSP/Lcd/: LovyanGFX_Emma.hpp
Firmware/SourceCode/Emma_test/components/EmmaBSP/LvglPort/: README.md  lv_conf_temp.h  lv_port_disp.cpp  lv_port_disp.h  lv_port_indev.cpp  lv_port_indev.h
Firmware/SourceCode/Emma_test/main/: CMakeLists.txt  Emma_test.c  Emma_test.cpp
Hardware/: Emma_BOM.xlsx  Emma_PickAndPlace.xlsx
